remove fixes for jboss plugin