@@ -36,31 +36,10 @@
 		<mvn-compiler-version>3.0</mvn-compiler-version>
 		<mvn-groovy-compiler-version>2.7.0-01</mvn-groovy-compiler-version>
 		<mvn-war-version>2.3</mvn-war-version>
-		<eclipse-m2e-mapping-version>1.0.0</eclipse-m2e-mapping-version>
 		<clean-plugin-version>2.5</clean-plugin-version>
 
 		<mvn-jetty-version>8.1.10.v20130312</mvn-jetty-version>
-		<mvn-jboss-plugin-version>7.4.Final</mvn-jboss-plugin-version>
-		<jboss-version>7.1.1.Final</jboss-version>
 
-		<webappDirName>webapp.war</webappDirName>
-
-		<!-- work around for log manager not set problem for old jboss 7 -->
-		<downloaded-jboss-home-dir>target/jboss-as-run/jboss-as-${jboss-version}</downloaded-jboss-home-dir>
-		<jvm-args-workaround-for-log-manager>
-			-Xms64m
-			-Xmx512m
-			-XX:MaxPermSize=256m
-			-Djava.net.preferIPv4Stack=true
-			-Dorg.jboss.resolver.warning=true
-			-Dsun.rmi.dgc.client.gcInterval=3600000
-			-Dsun.rmi.dgc.server.gcInterval=3600000
-			-Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager
-			-Djava.util.logging.manager=org.jboss.logmanager.LogManager
-			-Xbootclasspath/p:${downloaded-jboss-home-dir}/modules/org/jboss/logmanager/main/jboss-logmanager-1.2.0.GA.jar
-			-Xbootclasspath/p:${downloaded-jboss-home-dir}/modules/org/jboss/logmanager/log4j/main/jboss-logmanager-log4j-1.0.0.GA.jar
-			-Xbootclasspath/p:${downloaded-jboss-home-dir}/modules/org/apache/log4j/main/log4j-1.2.16.jar
-		</jvm-args-workaround-for-log-manager>
 	</properties>
 
 	<scm>
@@ -94,13 +73,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>
-
-		<!-- AspectJ -->
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>${org.aspectj-version}</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -225,16 +197,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>${clean-plugin-version}</version>
-				<configuration>
-					<filesets>
-						<fileset>
-							<directory>src/main/${webappDirName}/WEB-INF/classes</directory>
-						</fileset>
-						<fileset>
-							<directory>src/main/${webappDirName}/WEB-INF/lib</directory>
-						</fileset>
-					</filesets>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -267,86 +229,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${mvn-war-version}</version>
-				<configuration>
-					<warSourceDirectory>src/main/${webappDirName}</warSourceDirectory>
-					<webappDirectory>src/main/${webappDirName}</webappDirectory>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${mvn-jetty-version}</version>
-				<configuration>
-					<webAppSourceDirectory>src/main/${webappDirName}</webAppSourceDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jboss.as.plugins</groupId>
-				<artifactId>jboss-as-maven-plugin</artifactId>
-				<version>${mvn-jboss-plugin-version}</version>
-				<configuration>
-					<version>${jboss-version}</version>
-					<!-- work around for log manager not set problem on old jboss 7 -->
-					<!-- <jvmArgs>${jvm-args-workaround-for-log-manager}</jvmArgs> -->
-				</configuration>
 			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>${eclipse-m2e-mapping-version}</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-compiler-plugin
-										</artifactId>
-										<versionRange>
-											[${mvn-compiler-version},)
-										</versionRange>
-										<goals>
-											<goal>testCompile</goal>
-											<goal>compile</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-checkstyle-plugin
-										</artifactId>
-										<versionRange>
-											[${version.checkstyle.plugin},)
-										</versionRange>
-										<goals>
-											<goal>checkstyle</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 	<reporting>
 		<plugins>
